--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -33,5 +33,5 @@
 }
 
 .prose pre {
-  @apply text-base lg:text-lg;
+  @apply text-base;
 }
